--- a/pages/_gl.html
+++ b/pages/_gl.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gulideline︱AI 虛擬陪伴</title>
   </head>
-  <body>
+  <body style="background-color: #000;">
     <%- include('./layout/header'); -%>
 
-    <div class="container mt-32 mb-64">
+    <div class="container mt-32 mb-64 pt-80">
+
+     <div class="row">
+      <div class="col-lg-3 border-end border-danger border-lg-end-0" style="width: 300px; height: 200px;">
+        123
+      </div>
+     </div>
       <h3>Typography</h3>
       <hr>
       <p class="fs-96 ff-noto-sans fw-bolder">Heading 96px Black</p>
